test_programs/valid/function_prototype.c
int test_func(int a, int b);
