test_programs/invalid/old_style_func_def.c
int test_func(a, int b)
    int a;
    int b;
{
    return 0;
}
